--- a/css/styles.css
+++ b/css/styles.css
@@ -39,11 +39,6 @@ h6 {
   margin: 0;
 }
 
-/* ul {
-  margin: 0;
-  padding-left: 0;
-} */
-
 img {
   display: block;
   max-width: 100%;
@@ -99,10 +94,15 @@ body {
   align-items: center;
 }
 
+.header {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: var(--portfolio-item-stroke);
+}
+
 .header-logo {
   padding-top: 24px;
   padding-bottom: 24px;
-  margin-right: 93px;
 
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -126,7 +126,13 @@ body {
   position: relative;
 }
 
+.header-item:first-child {
+  margin-left: 93px;
+}
+
 .header-link {
+  position: relative;
+
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -137,6 +143,32 @@ body {
   color: var(--main-text-color);
 }
 
+.header-list .header-link::after {
+  content: '';
+
+  position: absolute;
+  bottom: 0;
+  bottom: -1px;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-list .header-link:hover::after {
+  opacity: 1;
+}
+
+.header-list .header-link.current::after {
+  opacity: 1;
+}
+
 .header-item:not(:last-child) {
   margin-right: 50px;
 }
@@ -144,40 +176,14 @@ body {
 .header-link.current {
   color: var(--accent-color);
 }
-/* .header-link::after {
-  position: absolute;
-  content: '';
-  height: 4px;
-  width: 48px;
-  margin-bottom: 28px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-} */
-/* .header-link.current::after {
-  position: absolute;
-  display: block;
-  content: '';
-  top: 45px;
-  transform: translateX(0);
-  left: 0;
-  /* bottom: -2px; */
 
-/* background: var(--accent-color);
-  border-radius: 2px;
-  width: 48px;
-  height: 4px;
-  border-radius: 2px;
-} */
-*/ .header-link:hover,
+.header-link:hover,
 .header-link:focus,
 .header-email:hover,
 .header-email:focus,
 .header-tel:hover,
 .header-tel:focus {
   color: var(--accent-color);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-connect {
@@ -203,6 +209,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-icons {
@@ -210,7 +218,7 @@ body {
   margin-right: 10px;
 }
 
-.header-tel {
+.header-contacts-item:last-child {
   margin-left: 50px;
 }
 
@@ -256,17 +264,16 @@ body {
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--hero-btn-text-color);
-  background: var(--hero-btn-bg);
+  background-color: var(--hero-btn-bg);
 
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  background: var(--hero-btn-bg-hover-focus);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--hero-btn-bg-hover-focus);
 }
 
 /* ---------------Наши преимущества---------------*/
@@ -407,6 +414,8 @@ body {
 }
 
 .team-item {
+  margin-bottom: 16px;
+
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -418,17 +427,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  margin-right: 10px;
 }
 
 .team-soc-item {
   width: 44px;
   height: 44px;
-
-  margin-right: 10px;
-  margin-top: 16px;
 }
 
-.team-soc-item:last-child {
+.team-soc-list:last-child {
   margin-left: 0;
 }
 
@@ -441,6 +449,9 @@ body {
   border-radius: 50%;
   background-color: var(--main-bg-color);
   color: #afb1b8;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-icon {
@@ -451,9 +462,6 @@ body {
 .team-soc-link:focus {
   background-color: var(--accent-color);
   color: var(--main-bg-color);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------------Постоянные клиенты---------------*/
@@ -478,6 +486,7 @@ body {
   margin-right: 30px;
   width: 170px;
   height: 92px;
+  outline: transparent;
 }
 
 .clients-item:last-child {
@@ -495,6 +504,8 @@ body {
   border-radius: 4px;
   background-color: var(--main-bg-color);
   color: #afb1b8;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
@@ -505,9 +516,6 @@ body {
 .clients-link:focus {
   border: 1px solid var(--accent-color);
   color: var(--accent-color);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------------Подвал сайта---------------*/
@@ -554,6 +562,8 @@ body {
   letter-spacing: 0.03em;
 
   color: var(--footer-address-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-email,
@@ -563,6 +573,8 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--footer-contacts-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address:hover,
@@ -572,9 +584,6 @@ body {
 .footer-tel:hover,
 .footer-tel:focus {
   color: var(--accent-color);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-soc {
@@ -582,6 +591,8 @@ body {
 }
 
 .contact-text {
+  margin-bottom: 20px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -601,7 +612,6 @@ body {
   height: 44px;
 
   margin-right: 10px;
-  margin-top: 20px;
 }
 
 .footer-soc-item:last-child {
@@ -617,6 +627,8 @@ body {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--main-bg-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-icon {
@@ -626,18 +638,10 @@ body {
 .footer-soc-link:hover,
 .footer-soc-link:focus {
   background-color: var(--accent-color);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------------Portfolio.html--------------- */
 /* ---------------WebStudio Портфолио--------------- */
-.header.web-portfolio {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: var(--portfolio-item-stroke);
-}
 
 .buttons {
   display: flex;
@@ -665,8 +669,9 @@ body {
 
   cursor: pointer;
 
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-button:hover,
@@ -711,6 +716,17 @@ body {
   margin-bottom: 4px;
 }
 
+.portfolio-items {
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-items:hover,
+.portfolio-items:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-item {
   font-weight: 400;
   font-size: 16px;
@@ -721,47 +737,24 @@ body {
 
 .portfolio-items {
   flex-basis: calc((100% - 60px) / 3);
-  /* 
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
-}
-
-.items-link {
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-items > .items.link:hover,
-.portfolio-items > .items.link:focus {
-  border: 1px solid #eeeeee;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-thumb {
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
   overflow: hidden;
-  max-width: 370px;
-  max-height: 294px;
-}
-
-.items.link:hover .portfolio-overlay,
-.items.link:focus .portfolio-overlay {
-  transform: translatex(0);
 }
 
 .portfolio-overlay {
   position: absolute;
-  display: flex;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
 
-  transform: translateY(100%);
-  /* transition: transform 250ms ease; */
+  transform: translatey(150%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-overlay > p {
@@ -772,7 +765,11 @@ body {
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #ffffff;
-  background: rgba(33, 150, 243, 0.9);
+}
+
+.portfolio-items:hover .portfolio-overlay {
+  transform: translatey(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .abbr {
@@ -792,14 +789,17 @@ body {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+
+  transform: scale(0);
 }
 
 .modal {
   position: absolute;
 
+  display: flex;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   width: 528px;
   min-height: 581px;
   padding: 10px;
@@ -808,6 +808,8 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -826,15 +828,13 @@ body {
   align-items: center;
 
   cursor: pointer;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-icon:hover,
 .modal-close-btn:focus {
-  border-color: var(--accent-color);
   color: var(--accent-color);
   fill: var(--accent-color);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
