--- a/css/styles.css
+++ b/css/styles.css
@@ -124,14 +124,12 @@ body {
 .header-list {
   display: flex;
   position: relative;
-}
-
-.header-item:first-child {
   margin-left: 93px;
 }
 
 .header-link {
   position: relative;
+  display: block;
 
   padding-top: 32px;
   padding-bottom: 32px;
@@ -141,6 +139,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list .header-link::after {
@@ -427,8 +427,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
-  margin-right: 10px;
 }
 
 .team-soc-item {
@@ -436,8 +434,12 @@ body {
   height: 44px;
 }
 
-.team-soc-list:last-child {
+.team-soc-link:last-child {
   margin-left: 0;
+}
+
+.team-soc-item + .team-soc-item {
+  margin-left: 10px;
 }
 
 .team-soc-link {
@@ -486,7 +488,6 @@ body {
   margin-right: 30px;
   width: 170px;
   height: 92px;
-  outline: transparent;
 }
 
 .clients-item:last-child {
@@ -504,6 +505,7 @@ body {
   border-radius: 4px;
   background-color: var(--main-bg-color);
   color: #afb1b8;
+  outline: transparent;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -717,8 +719,12 @@ body {
 }
 
 .portfolio-items {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  flex-basis: calc((100% - 60px) / 3);
+}
+
+.items {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-items:hover,
@@ -733,10 +739,6 @@ body {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
-}
-
-.portfolio-items {
-  flex-basis: calc((100% - 60px) / 3);
 }
 
 .portfolio-thumb {
@@ -757,6 +759,11 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.items:hover .portfolio-overlay,
+.items:focus .portfolio-overlay {
+  transform: translatey(0);
+}
+
 .portfolio-overlay > p {
   padding: 63px 24px;
 
@@ -767,30 +774,30 @@ body {
   color: #ffffff;
 }
 
-.portfolio-items:hover .portfolio-overlay {
-  transform: translatey(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .abbr {
   text-transform: uppercase;
 }
 
 .backdrop {
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.2);
   top: 0;
   left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms;
+  opacity: 1;
 }
 
 .backdrop.is-hidden {
   opacity: 0;
-  visibility: hidden;
   pointer-events: none;
 
-  transform: scale(0);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
 }
 
 .modal {
@@ -828,13 +835,9 @@ body {
   align-items: center;
 
   cursor: pointer;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
-.modal-close-icon:hover,
 .modal-close-btn:focus {
-  color: var(--accent-color);
   fill: var(--accent-color);
 }
